Fixed top spacing

--- a/css/forms.scss
+++ b/css/forms.scss
@@ -198,7 +198,7 @@ html.full-background {
 		transform: translateX(-50%);
 	}
 	#form {
-		margin-top: 50px;
+		margin-top: 67px;
 	}
 }
 
